# rustcare-engine

./: .env.example  .env.test  .gitignore  .gitignore.append  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Cargo.toml.append  Dockerfile  HEALTHCARE_COMPARISON.md  LICENSE  LICENSE-MIT  Makefile  PERFORMANCE_LIBRARIES.md  QUICKSTART.md  README.md  README.test.md  UNWRAP_REMOVAL.md  auth-config.toml  quick-start.sh  sonar-project.properties
accounting-service/: Cargo.toml
accounting-service/src/: error.rs  ledger.rs  lib.rs  models.rs  receivables.rs  reporting.rs  service.rs
audit-engine/: Cargo.toml
audit-engine/src/: compliance.rs  engine.rs  entry.rs  error.rs  export.rs  lib.rs  merkle.rs  search.rs  storage.rs  trail.rs
auth-gateway/: Cargo.toml
auth-gateway/src/: lib.rs
auth-identity/: Cargo.toml
auth-identity/src/: config.rs  error.rs  handlers.rs  lib.rs  models.rs  repository.rs  service.rs
auth-oauth/: Cargo.toml
auth-oauth/src/: client.rs  error.rs  handlers.rs  lib.rs  models.rs  provider.rs
auth-zanzibar/: Cargo.toml
auth-zanzibar/src/: check.rs  engine.rs  error.rs  expand.rs  lib.rs  models.rs  repository.rs  rls_integration.rs  schema.rs
auth-zanzibar/src/repository/: postgres.rs
auth-zanzibar/tests/: hospital_workflow_tests.rs  integration_tests.rs  postgres_repository_tests.rs
billing-service/: Cargo.toml
billing-service/src/: claims.rs  error.rs  lib.rs  models.rs  payment.rs  reporting.rs  service.rs
config-engine/: Cargo.toml
config-engine/src/: encryption.rs  engine.rs  error.rs  lib.rs  providers.rs  templates.rs  validation.rs  watchers.rs
crypto/: Cargo.toml
crypto/src/: aes_gcm.rs  config.rs  constant_time.rs  encryption.rs  envelope.rs  error.rs  kdf.rs  lib.rs  memory_security.rs
crypto/src/kms/: aws.rs  mod.rs  traits.rs  vault.rs
database-layer/: Cargo.toml
database-layer/migrations/: postgresql_tde_setup.sql
database-layer/src/: audit.rs  authorization.rs  backup.rs  compliance_repository.rs  connection.rs  encryption.rs  error.rs  geographic_repository.rs  lib.rs  migration.rs  models.rs  query.rs  rls.rs  tde.rs  transaction.rs
database-layer/tests/: encryption_tests.rs  masking_tests.rs
device-manager/: Cargo.toml
device-manager/src/: error.rs  lib.rs  manager.rs  plugin.rs  registry.rs  repository.rs  types.rs
email-service/: Cargo.toml
email-service/src/: compliance.rs  delivery.rs  error.rs  lib.rs  service.rs  verification.rs
error-common/: Cargo.toml
error-common/src/: codes.rs  context.rs  lib.rs  recovery.rs  reporting.rs  sanitization.rs  types.rs
events-bus/: Cargo.toml
events-bus/src/: bus.rs  error.rs  event.rs  handlers.rs  lib.rs  publisher.rs  subscriber.rs
external-services/secrets-service/: Cargo.toml
external-services/secrets-service/src/: audit.rs  error.rs  rotation.rs
insurance-service/: Cargo.toml
insurance-service/src/: authorization.rs  eligibility.rs  error.rs  lib.rs  models.rs  service.rs
logger-redacted/: Cargo.toml
logger-redacted/src/: audit.rs  compliance.rs  config.rs  filters.rs  formatters.rs  lib.rs  macros.rs  redactor.rs
mcp-server/: Cargo.toml  README.md
mcp-server/examples/: complete_example.rs  decorator_example.rs  response_types_example.md  usage_example.md
mcp-server/src/: build.rs  capabilities.rs  error.rs  lib.rs  protocol.rs  registry.rs  render.rs  sensitive_filter.rs  server.rs  tool_wrapper.rs  tools.rs  transport.rs
object-governance/: Cargo.toml
object-governance/src/: classification.rs  error.rs  governance.rs  lib.rs  lifecycle.rs  policies.rs  storage.rs
object-governance/src/backends/: filesystem.rs  kms_integration.rs  mod.rs  s3.rs
ops-cli/: Cargo.toml
ops-cli/src/: lib.rs  main.rs
plugin-runtime-core/: Cargo.toml
plugin-runtime-core/src/: api.rs  error.rs  lib.rs  lifecycle.rs  loader.rs  native.rs  runtime.rs  sandbox.rs  security.rs  wasm.rs
plugins-registry-api/: Cargo.toml
plugins-registry-api/src/: lib.rs
rustcare-server/: Cargo.toml  TASK-8-COMPLETE.md
rustcare-server/proto/: audit.proto  auth.proto  healthcare.proto  workflow.proto
rustcare-server/src/: error.rs  grpc.rs  lib.rs  main.rs  middleware.rs  openapi.rs  routes.rs  server.rs  validation.rs
rustcare-server/src/auth/: certificate.rs  middleware.rs  mod.rs  models.rs  response_masking.rs  tokens.rs
rustcare-server/src/events/: mod.rs
rustcare-server/src/handlers/: auth.rs  compliance.rs  devices.rs  geographic.rs  health.rs  healthcare.rs  kms.rs  mod.rs  notifications.rs  onboarding.rs  organizations.rs  permissions.rs  pharmacy.rs  secrets.rs  sync.rs  ui_components.rs  vendors.rs  workflow.rs
rustcare-server/src/middleware/: auth_context.rs  extractors.rs  mod.rs  request_context.rs  security.rs  security_middleware.rs
rustcare-server/src/services/: audit.rs  compliance_service.rs  mod.rs  organization_service.rs
rustcare-server/src/storage/: mod.rs  s3_service.rs
rustcare-server/src/types/: pagination.rs
rustcare-server/src/utils/: query_builder.rs  timestamps.rs
rustcare-server/tests/: compliance_tests.rs
rustcare-sync/: Cargo.toml
rustcare-sync/docs/: KMS_INTEGRATION.md  SECURE_MEMORY.md
rustcare-sync/src/: audit.rs  conflict_resolution.rs  error.rs  field_encryption.rs  hlc.rs  lib.rs  local_db.rs  p2p.rs  secure_memory.rs  sync_protocol.rs
rustcare-sync/src/crdt/: g_counter.rs  lww_register.rs  or_set.rs  rga.rs
secrets-service/: Cargo.toml
secrets-service/src/: cache.rs  config.rs  health.rs  lib.rs  manager.rs
server/rustcare-server/: Cargo.toml  build.rs
telemetry/: Cargo.toml
telemetry/src/: alerts.rs  collectors.rs  dashboard.rs  error.rs  exporters.rs  health.rs  lib.rs  logging.rs  metrics.rs  tracing.rs
voice-recognition-service/: Cargo.toml
voice-recognition-service/src/: config.rs  error.rs  lib.rs  medical_vocabulary.rs  service.rs  transcription.rs
workflow-engine/: Cargo.toml
workflow-engine/src/: compensation.rs  conditions.rs  engine.rs  error.rs  executor.rs  lib.rs  scheduler.rs  state_machine.rs  task.rs  workflow.rs
(+197 files in other folders)
