[package]
name = "auth-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Authentication and authorization gateway for RustCare Engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Internal dependencies
auth-identity = { path = "../auth-identity" }
auth-oauth = { path = "../auth-oauth" }
auth-zanzibar = { path = "../auth-zanzibar" }
telemetry = { path = "../telemetry" }

# Gateway specific dependencies
hyper = { workspace = true }
http = "1.0"
headers = "0.4"