[package]
name = "auth-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Identity management and user authentication for RustCare Engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
jwt = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
crypto = { path = "../crypto" }

# Additional specific dependencies
argon2 = "0.5"
rand = "0.8"