[package]
name = "auth-oauth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "OAuth 2.0 provider implementation for RustCare Engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

# Internal dependencies
auth-identity = { path = "../auth-identity" }
crypto = { path = "../crypto" }

# OAuth specific dependencies
oauth2 = { workspace = true }
jsonwebtoken = "9.1"
base64 = { workspace = true }
url = "2.4"