[package]
name = "config-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration management engine for RustCare Engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }

# Config specific dependencies
figment = { version = "0.10", features = ["yaml", "env", "toml"] }
# etcd-rs = "1.0"  # Disabled due to protobuf issues
consul = "0.4"
notify = "6.1"
directories = "5.0"