[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cryptographic utilities and security primitives for RustCare Engine"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ring = { workspace = true }
async-trait = { workspace = true }

# Crypto specific dependencies
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rsa = "0.9"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
constant_time_eq = "0.3"
subtle = "2.5"
base64 = "0.21"
hex = "0.4"

# Key derivation
pbkdf2 = { version = "0.12", features = ["simple"] }
argon2 = "0.5"
hkdf = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# KMS dependencies (optional)
aws-config = { version = "1.5", optional = true }
aws-sdk-kms = { version = "1.52", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi"] }

[features]
default = []
aws-kms = ["aws-config", "aws-sdk-kms"]
vault-kms = ["reqwest"]