[package]
name = "database-layer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Database abstraction layer with Row Level Security for RustCare Engine"

[[bin]]
name = "rotate_keys"
path = "src/bin/rotate_keys.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
sea-orm = { workspace = true }
clap = { workspace = true }

# Internal dependencies
error-common = { path = "../error-common" }
logger-redacted = { path = "../logger-redacted" }
auth-zanzibar = { path = "../auth-zanzibar" }
crypto = { path = "../crypto" }

# Database specific dependencies
sea-orm-migration = "0.12"
sha2 = { workspace = true }
hex = "0.4"
aes-gcm = "0.10"
base64 = { workspace = true }
rand = { workspace = true }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
utoipa = { version = "5.4", features = ["chrono", "uuid"] }