[package]
name = "device-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Database
sqlx = { workspace = true }

# Networking
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"  # WebSocket
serialport = "4"             # Serial devices

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"