[package]
name = "email-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HIPAA-compliant email service with encryption and audit logging"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
error-common = { path = "../error-common" }
logger-redacted = { path = "../logger-redacted" }
crypto = { path = "../crypto" }
events-bus = { path = "../events-bus" }
audit-engine = { path = "../audit-engine" }

# Stalwart Labs email libraries (production-grade SMTP)
mail-send = "0.4"
mail-auth = "0.3"
mail-builder = "0.3"

# Email specific dependencies
mail-parser = "0.8"
handlebars = "4.4"
html2text = "0.6"
mime = "0.3"
base64 = "0.21"