[package]
name = "events-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Event-driven messaging bus for RustCare Engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Event bus specific dependencies
tokio-stream = "0.1"
futures = "0.3"
dashmap = "5.5"
crossbeam-channel = "0.5"
rdkafka = { version = "0.36", features = ["cmake-build"] }
lapin = "2.3"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }