[package]
name = "object-governance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Data governance and lifecycle management for RustCare Engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
auth-zanzibar = { path = "../auth-zanzibar" }
audit-engine = { path = "../audit-engine" }
crypto = { path = "../crypto" }
events-bus = { path = "../events-bus" }

# Governance specific dependencies
regex = "1.10"
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"