[package]
name = "object-governance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Data governance and lifecycle management for RustCare Engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
auth-zanzibar = { path = "../auth-zanzibar" }
audit-engine = { path = "../audit-engine" }
crypto = { path = "../crypto" }
events-bus = { path = "../events-bus" }

# Governance specific dependencies
regex = "1.10"
glob = "0.3"
sha2 = "0.10"

# S3 storage backend (optional - requires rustc 1.86.0+)
aws-sdk-s3 = { version = "1.5", optional = true }
aws-config = { version = "1.0", optional = true }
aws-types = { version = "1.0", optional = true }
bytes = { version = "1.5", optional = true }

[features]
default = []
s3-backend = ["aws-sdk-s3", "aws-config", "aws-types", "bytes"]

[dev-dependencies]
tempfile = "3.8"